# advent_of_code

./: .bazelrc  .clang-format  .gitignore  CMakeLists.txt
2023/day1/: BUILD
2023/day2/: experiments.cpp  utils.h
2023/day3/: experiments.cpp  part2.cpp  part2.txt  solution.cpp
2023/day4/: part1.cpp  utils_old.h
2023/utils/: BUILD
2024/: .clang-format  .gitignore  CMakeLists.txt  bazel-testlogs  main  main.cpp
2024/day1/: day1.cpp  day1.h
2024/day2/: day2.cpp  day2.h  example.txt
2024/day3/: day3.cpp  day3.h
2024/day4/: day4.cpp  day4.h  test.txt
2024/day5/: day5.cpp  day5.h  day5_old.h  example.txt  test.txt
2024/day6/: day6.cpp  day6.h  day6.py  solution.py
2024/day6/test/: test_map_interpreter.py
2024/day7/: day7.cpp  log.txt  main.cpp
2024/day8/: day8.cpp  test.txt
2024/day9/: day9.cpp  log.txt
2024/utils/: BUILD  file_reader.h  file_reader.py  graph_containers.h  numbers_in_string.h  print_vector.h
2024/utils/test/: BUILD  test_file_reader.py
2025/: .clang-format  .gitignore  CMakeLists.txt
2025/common/: disjoint_set_union.h  graph.h  read_file.h
2025/day1/: day1.cpp  day1.h  test.txt
2025/day2/: day2.cpp  day2.h  test.cpp
2025/day3/: day3.cpp  day3.h  test.cpp  test.txt
2025/day4/: day4.cpp  day4.h  test.cpp
2025/day5/: day5.cpp  day5.h  test.cpp
2025/day6/: day6.cpp  day6.h  test.cpp
2025/day7/: day7.cpp  day7.h  log.txt  test.cpp
2025/day8/: day8.cpp  day8.h  test.cpp
2025/day9/: day9.cpp  day9.h
day1/: experiments.cpp  part1.cpp  part2.cpp  test.cpp  utils.h
day2/: BUILD  part1.cpp  part2.cpp
day3/: BUILD  part1.cpp  utils.h
day4/: part2.cpp
utils/: utils.h
